# Projekt_BD_1

./: .gitignore  BD1.pro  CMakeLists.txt  database.cpp  database.h  login.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projekt_tabele.sql
include/: database.h
src/: database.cpp  main.cpp
